--- a/README
+++ b/README
@@ -1,8 +1,5 @@
-【人工知能】ゲームプログラミング【DeepLearning】
 
-将棋  
-  bashのチェス AI実装版(Minimax/alpha-bata/negamaxなどの探索アルゴリズム) 
-
+    java 将棋  
      ９　８　７　６　５　４　３　２　１
     +---+---+---+---+---+---+---+---+---+
     |v香|v桂|v銀|v金|v王|v金|v銀|v桂|v香|一 
